--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>AltınZanaat</title>
+        <title>KodKale</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport" />
         <meta content="" name="keywords" />
         <meta content="" name="description" />
@@ -68,7 +68,7 @@
                 class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0"
             >
                 <a href="" class="navbar-brand p-0">
-                    <h1 class="text-primary m-0">AltınZanaat</h1>
+                    <h1 class="text-primary m-0">KodKale</h1>
                 </a>
                 <button
                     class="navbar-toggler"
@@ -106,21 +106,20 @@
                             <h1
                                 class="display-3 text-white mb-3 animated slideInDown"
                             >
-                                Zenginliğinizi Güçlendirin: Uzman Danışmanlık
-                                ile Finansal Refah
+                                Oyun Geliştirmenin Gücünü Keşfedin: Yaratıcı
+                                Çözümlerle Başarıya Ulaşın
                             </h1>
                             <p
                                 class="fs-4 text-white mb-4 animated slideInDown"
                             >
-                                Kapsamlı danışmanlık hizmetlerimizle finansal
-                                başarıya giden sırları keşfedin. Sağlam
-                                stratejiler oluşturmanın yanı sıra, pasif gelir
-                                akışlarını güvence altına alarak, uzman
-                                rehberliğinde finansal bağımsızlığa ulaşmanıza
-                                yardımcı oluyoruz. Akıllı yatırımlar, portföy
-                                çeşitlendirmesi ve hedeflerinize uygun varlık
-                                yönetimi gücünü keşfedin. Geleceğinize bugün
-                                yatırım yapın!
+                                Yaratıcı oyun projelerinizde başarıya giden
+                                sırları keşfedin. Güçlü tasarım ve yazılım
+                                geliştirme süreçleriyle, oyun dünyasında
+                                kendinizi en üst seviyeye taşıyın. Oyun
+                                motorları, kullanıcı deneyimi tasarımı ve
+                                gelişmiş yazılım çözümleriyle size en yenilikçi
+                                oyun geliştirme stratejileri sunuyoruz.
+                                Geleceğinizi bugün oluşturun!
                             </p>
                         </div>
                     </div>
@@ -154,24 +153,22 @@
                             Şirketimiz Hakkında
                         </h6>
                         <h1 class="mb-4">
-                            Seyahat ve Oyun Geliştirme Alanında Başarıya Güç
-                            Verme:
+                            Oyun Geliştirme Alanında Yaratıcılığınızı
+                            Güçlendirme:
                             <span class="text-primary">Bizimle Tanışın</span>
                         </h1>
                         <p class="mb-4">
-                            Seyahat, altın ve oyun geliştirme alanlarında
-                            müşterilerimize güç veren bir danışmanlık
-                            anlayışıyla yanınızdayız. Şirketimiz dürüstlük,
-                            uzmanlık ve kişiye özel hizmet ilkelerine dayanır ve
-                            her müşterinin hak ettiği ilgiyi almasını sağlamak
-                            için çaba gösteririz.
+                            Oyun geliştirme alanında müşterilerimize güç veren
+                            bir rehberlik anlayışıyla yanınızdayız. Şirketimiz
+                            dürüstlük, uzmanlık ve kişiye özel hizmet ilkelerine
+                            dayanır ve her müşterinin hak ettiği ilgiyi almasını
+                            sağlamak için çaba gösteririz.
                         </p>
                         <p class="mb-4">
-                            Seyahat ve oyun geliştirme gibi yaratıcı alanlarda
-                            doğru stratejilerle hedeflerinize ulaşmanızı
-                            sağlıyoruz. İster benzersiz bir seyahat deneyimi
-                            planlıyor olun, ister yeni bir oyun geliştirme
-                            sürecinde rehberlik arıyor olun, doğru kararlarla
+                            Yaratıcı projelerinizde doğru stratejilerle
+                            hedeflerinize ulaşmanızı sağlıyoruz. İster yeni bir
+                            oyun tasarımı yapıyor olun, ister oyun motorları
+                            hakkında rehberlik arıyor olun, doğru kararlarla
                             ilerlemeniz için yanınızdayız.
                         </p>
                     </div>
@@ -190,8 +187,7 @@
                         Hizmetlerimiz
                     </h6>
                     <h1 class="mb-5">
-                        Seyahat, Altın ve Oyun Geliştirme Alanında
-                        Hizmetlerimizi Keşfedin
+                        Oyun Geliştirme Alanında Hizmetlerimizi Keşfedin
                     </h1>
                 </div>
                 <div class="row g-4">
@@ -202,16 +198,14 @@
                         <div class="service-item rounded pt-3">
                             <div class="p-4">
                                 <i
-                                    class="fa fa-3x fa-globe text-primary mb-4"
+                                    class="fa fa-3x fa-cogs text-primary mb-4"
                                 ></i>
-                                <h5>Seyahat Planlaması</h5>
+                                <h5>Oyun Tasarımı</h5>
                                 <p>
-                                    Seyahat planlaması, yeni destinasyonlar
-                                    keşfetmek ve hayatınızın en unutulmaz
-                                    tatilini yaşamak için sağlam bir temele
-                                    dayanmalıdır. Müşterilerimize en iyi seyahat
-                                    deneyimini sağlamak için kişiye özel planlar
-                                    sunuyoruz.
+                                    Yaratıcı ve yenilikçi oyun tasarımları
+                                    oluşturuyoruz. Oyun dünyasının temel yapı
+                                    taşlarını inşa ederken, estetik ve oyun
+                                    deneyimi odaklı projeler geliştiriyoruz.
                                 </p>
                             </div>
                         </div>
@@ -223,15 +217,15 @@
                         <div class="service-item rounded pt-3">
                             <div class="p-4">
                                 <i
-                                    class="fa fa-3x fa-hotel text-primary mb-4"
+                                    class="fa fa-3x fa-laptop text-primary mb-4"
                                 ></i>
-                                <h5>Altın Yatırım</h5>
+                                <h5>Oyun Programlaması</h5>
                                 <p>
-                                    Altına yatırım yapmanın avantajlarını
-                                    keşfedin. Altın, uzun vadeli değer kazancı
-                                    sağlayarak, değerli bir varlık olarak öne
-                                    çıkar. Bizimle altın yatırımınızı güvenle
-                                    yapabilirsiniz.
+                                    Oyun motorları ve programlama dillerindeki
+                                    uzmanlığımızla etkileşimli oyunlar
+                                    geliştiriyoruz. Performans, güvenlik ve
+                                    kullanıcı deneyimi odaklı yazılımlar
+                                    oluşturuyoruz.
                                 </p>
                             </div>
                         </div>
@@ -243,17 +237,15 @@
                         <div class="service-item rounded pt-3">
                             <div class="p-4">
                                 <i
-                                    class="fa fa-3x fa-user text-primary mb-4"
+                                    class="fa fa-3x fa-users text-primary mb-4"
                                 ></i>
-                                <h5>Oyun Geliştirme</h5>
+                                <h5>Kullanıcı Deneyimi</h5>
                                 <p>
-                                    Oyun geliştirmenin heyecan verici dünyasına
-                                    adım atın. Oyun tasarımı, yazılım geliştirme
-                                    ve kullanıcı deneyimi konularında
-                                    uzmanlaşmış ekibimizle, en yaratıcı ve
-                                    eğlenceli oyunları geliştiriyoruz. İster
-                                    mobil ister PC oyunları için çözüm
-                                    sunuyoruz.
+                                    Kullanıcı dostu oyun deneyimleri oluşturmak
+                                    için kullanıcı geri bildirimlerine dayalı
+                                    olarak oyun tasarımını optimize ediyoruz.
+                                    Oyuncuların ilgisini çekecek eğlenceli ve
+                                    akıcı oyun süreçleri tasarlıyoruz.
                                 </p>
                             </div>
                         </div>
@@ -265,14 +257,14 @@
                         <div class="service-item rounded pt-3">
                             <div class="p-4">
                                 <i
-                                    class="fa fa-3x fa-cog text-primary mb-4"
+                                    class="fa fa-3x fa-code text-primary mb-4"
                                 ></i>
                                 <h5>Proje Yönetimi</h5>
                                 <p>
-                                    Seyahat, altın yatırımı veya oyun geliştirme
-                                    projeleriniz için profesyonel proje yönetimi
-                                    hizmeti sunuyoruz. Her aşamada kaliteli ve
-                                    zamanında sonuçlar almanızı sağlıyoruz.
+                                    Oyun geliştirme projelerinizde profesyonel
+                                    proje yönetimi hizmeti sunuyoruz. Süreçlerin
+                                    her aşamasında kaliteli ve zamanında
+                                    sonuçlar almanızı sağlıyoruz.
                                 </p>
                             </div>
                         </div>
@@ -295,8 +287,7 @@
                         Özellikler
                     </h6>
                     <h1 class="mb-5">
-                        Seyahatinizi Keşfedin: Öne Çıkan Özelliklerimizi
-                        Keşfedin
+                        Oyun Geliştirmede Öne Çıkan Özelliklerimizi Keşfedin
                     </h1>
                 </div>
                 <div class="row gy-5 gx-4 justify-content-center">
@@ -311,18 +302,16 @@
                                 class="d-inline-flex align-items-center justify-content-center bg-primary rounded-circle position-absolute top-0 start-50 translate-middle shadow"
                                 style="width: 100px; height: 100px"
                             >
-                                <i class="fa fa-globe fa-3x text-white"></i>
+                                <i class="fa fa-gamepad fa-3x text-white"></i>
                             </div>
-                            <h5 class="mt-4">Kişiye Özel Seyahat Planlaması</h5>
+                            <h5 class="mt-4">Yaratıcı Oyun Tasarımı</h5>
                             <hr class="w-25 mx-auto bg-primary mb-1" />
                             <hr class="w-50 mx-auto bg-primary mt-0" />
                             <p class="mb-0">
-                                Seyahatinizi kişiselleştirme yaklaşımımızla, her
-                                bireyin ve her seyahatin farklı ihtiyaçları
-                                olduğunu biliyoruz. Bu özellik ile uzman
-                                ekibimiz sizinle yakın çalışarak, seyahat
-                                hedeflerinizi belirler ve size özel bir planlama
-                                yaparak mükemmel bir deneyim sunar.
+                                Oyun tasarımında yenilikçi yaklaşımımızla,
+                                farklı oyun dünyaları yaratıyor ve oyuncuların
+                                unutulmaz deneyimler yaşamasını sağlıyoruz.
+                                Yaratıcılığınızı keşfetmek için bizimle çalışın.
                             </p>
                         </div>
                     </div>
@@ -337,20 +326,19 @@
                                 class="d-inline-flex align-items-center justify-content-center bg-primary rounded-circle position-absolute top-0 start-50 translate-middle shadow"
                                 style="width: 100px; height: 100px"
                             >
-                                <i
-                                    class="fa fa-solid fa-credit-card fa-3x text-white"
-                                ></i>
+                                <i class="fa fa-code fa-3x text-white"></i>
                             </div>
-                            <h5 class="mt-4">Stratejik Portföy Yönetimi</h5>
+                            <h5 class="mt-4">
+                                Yazılım Geliştirme ve Programlama
+                            </h5>
                             <hr class="w-25 mx-auto bg-primary mb-1" />
                             <hr class="w-50 mx-auto bg-primary mt-0" />
                             <p class="mb-0">
-                                Altın ve değerli metallerle ilgili stratejik
-                                yönetimle, riskleri yönetebilir ve kazancınızı
-                                artırabilirsiniz. Portföyünüzü, kişisel
-                                hedeflerinize ve risk toleransınıza göre
-                                optimize etmek için gelişmiş analizleri
-                                kullanıyoruz.
+                                Oyun yazılımında güçlü çözümler sunarak, oyun
+                                motorları, yapay zeka ve gelişmiş oyun
+                                mantıkları ile projelerinizi hayata geçiriyoruz.
+                                Yenilikçi ve verimli yazılım geliştirme
+                                süreciyle projelerinizi yönlendiriyoruz.
                             </p>
                         </div>
                     </div>
@@ -365,20 +353,17 @@
                                 class="d-inline-flex align-items-center justify-content-center bg-primary rounded-circle position-absolute top-0 start-50 translate-middle shadow"
                                 style="width: 100px; height: 100px"
                             >
-                                <i
-                                    class="fa fa-3x fa-solid fa-users text-white"
-                                ></i>
+                                <i class="fa fa-users fa-3x text-white"></i>
                             </div>
-                            <h5 class="mt-4">Aktif Varlık Yönetimi</h5>
+                            <h5 class="mt-4">Ekip Çalışması ve İletişim</h5>
                             <hr class="w-25 mx-auto bg-primary mb-1" />
                             <hr class="w-50 mx-auto bg-primary mt-0" />
                             <p class="mb-0">
-                                Oyun geliştirme projelerinde en iyi varlık
-                                yönetimi stratejilerini uygularız. Sürekli takip
-                                ve yönetimle projelerinizi en verimli şekilde
-                                yönlendirebiliriz. Bu süreç, projelerinizi
-                                başarıya taşımak için uzmanlarımızın desteğiyle
-                                yönetilir.
+                                Başarılı bir oyun geliştirme süreci, güçlü bir
+                                ekip çalışması gerektirir. Tasarımcılar,
+                                yazılımcılar ve sanatçılar arasındaki etkili
+                                iletişim ile projelerinizi en iyi şekilde
+                                yönetiyoruz.
                             </p>
                         </div>
                     </div>
@@ -417,7 +402,7 @@
                             ></div>
                             <div class="text-center p-4">
                                 <h5 class="mb-0">Sophia Lee</h5>
-                                <small>Seyahat Planlayıcısı</small>
+                                <small>Oyun Tasarımcısı</small>
                             </div>
                         </div>
                     </div>
@@ -439,7 +424,7 @@
                             ></div>
                             <div class="text-center p-4">
                                 <h5 class="mb-0">Alex Patel</h5>
-                                <small>Pazarlama Uzmanı</small>
+                                <small>Yazılım Geliştiricisi</small>
                             </div>
                         </div>
                     </div>
@@ -516,10 +501,10 @@
                         />
                         <h5 class="mb-0">David Miller</h5>
                         <p class="mb-0">
-                            Seyahat planlaması konusunda ekibin
-                            profesyonelliğinden çok etkilendim. Detaylı
-                            analizleri ve açık önerileriyle tatil planımızı
-                            harika bir şekilde organize ettiler.
+                            Oyun geliştirme projelerinde ekibin
+                            profesyonelliğinden çok etkilendim. Yaratıcı
+                            çözümleri ve önerileriyle projelerimizi harika bir
+                            şekilde yönlendirdiler.
                         </p>
                     </div>
                     <div
@@ -548,9 +533,9 @@
                         />
                         <h5 class="mb-0">Sophia Lee</h5>
                         <p class="mb-0">
-                            Oyun projelerimizde altın yatırımları ile ilgili
-                            destek aldık ve çok verimli sonuçlar elde ettik. Çok
-                            teşekkür ederiz.
+                            Oyun projelerimizde aldığımız destekle çok verimli
+                            sonuçlar elde ettik. Gerçekten mükemmel bir iş
+                            çıkardılar.
                         </p>
                     </div>
                 </div>
@@ -584,7 +569,8 @@
                             allowfullscreen=""
                             loading="lazy"
                             referrerpolicy="no-referrer-when-downgrade"
-                        ></iframe>
+                        >
+                        </iframe>
                     </div>
                     <div
                         class="col-lg-6 col-md-12 wow fadeInUp"
@@ -668,7 +654,7 @@
             <div class="container py-5">
                 <div class="row g-5">
                     <div class="col-lg-4 col-md-6">
-                        <h4 class="text-white mb-3">AltınZanaat</h4>
+                        <h4 class="text-white mb-3">KodKale</h4>
                         <p>
                             Web sitemizi ziyaret ettiğiniz için teşekkür ederiz!
                             Sizinle iletişimde kalmayı ve sunduğumuz hizmetler
@@ -704,7 +690,6 @@
                 </div>
             </div>
         </div>
-
         <!-- Footer End -->
 
         <!-- Back to Top -->
