--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>AltınZanaat</title>
+        <title>KodKale</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport" />
         <meta content="" name="keywords" />
         <meta content="" name="description" />
@@ -68,7 +68,7 @@
                 class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0 sticky-top shadow-sm"
             >
                 <a href="" class="navbar-brand p-0">
-                    <h1 class="text-primary m-0">AltınZanaat</h1>
+                    <h1 class="text-primary m-0">KodKale</h1>
                 </a>
                 <button
                     class="navbar-toggler"
@@ -107,97 +107,99 @@
                 style="margin-top: 100px"
             >
                 <div class="page__content" style="padding: 20px 0px">
-                    <h1>Kullanım Şartları</h1>
+                    <h1>Hizmet Kullanım Şartları</h1>
                     <p>
-                        Web sitemize hoş geldiniz! Bu şartlar, sunduğumuz
-                        hizmetlerin kullanımını düzenlemektedir. Hizmetlerimizi
-                        erişerek veya kullanarak, bu şartlara uymayı kabul etmiş
-                        olursunuz. Lütfen dikkatlice okuyun.
+                        Hizmet Kullanım Şartları sayfamıza hoş geldiniz! Bu
+                        şartlar, sunduğumuz oyun geliştirme hizmetlerini
+                        kullanmanızı yönetmektedir. Hizmetlerimizi erişerek veya
+                        kullanarak bu şartlara uymayı kabul edersiniz. Lütfen
+                        dikkatlice okuyun.
                     </p>
                     <div>
                         <h2>1. Şartların Kabulü</h2>
                         <p>
-                            Web sitemizi erişerek veya kullanarak, bu Kullanım
-                            Şartlarına ve Gizlilik Politikasına uymayı kabul
-                            etmiş olursunuz. Bu şartlara katılmıyorsanız,
-                            hizmetlerimizi kullanamazsınız.
+                            Hizmetlerimize erişerek veya kullanarak, bu Hizmet
+                            Kullanım Şartları ve Gizlilik Politikamız ile bağlı
+                            kalmayı kabul edersiniz. Bu şartları kabul
+                            etmiyorsanız, hizmetlerimizi kullanamazsınız.
                         </p>
                     </div>
                     <div>
                         <h2>2. Hizmetlerin Kullanımı</h2>
                         <p>
-                            Web sitemizdeki hizmetler, kişisel veya ticari
-                            kullanımınız içindir. Hizmetlerimizi yasa dışı veya
-                            yetkisiz amaçlarla kullanamazsınız. Tüm geçerli yasa
-                            ve düzenlemelere uymayı kabul edersiniz.
+                            Hizmetlerimiz, oyun geliştirme sürecinde size
+                            yardımcı olmak için tasarlanmıştır. Hizmetlerimizi
+                            herhangi bir yasa dışı veya yetkisiz amaçla
+                            kullanamazsınız. Tüm geçerli yasa ve düzenlemelere
+                            uymayı kabul edersiniz.
                         </p>
                     </div>
                     <div>
                         <h2>3. Kullanıcı Hesabı</h2>
                         <p>
-                            Eğer bizimle bir hesap oluşturursanız, hesabınızın
+                            Bizimle bir hesap oluşturduğunuzda, hesabınızın
                             güvenliğini sağlamak ve hesabınız altında
-                            gerçekleşen tüm işlemlerden sorumlu olmak sizlere
-                            aittir. Hesap oluştururken doğru ve eksiksiz bilgi
-                            vermeyi kabul eder, gerektiğinde bilgilerinizi
-                            güncelleyerek doğru ve geçerli tutmayı taahhüt
-                            edersiniz.
+                            gerçekleşen herhangi bir faaliyet için sorumlu
+                            olursunuz. Hesabınızı oluştururken doğru ve eksiksiz
+                            bilgi sağlamak ve gerektiğinde bilgilerinizi güncel
+                            tutmak konusunda sorumluluk kabul edersiniz.
                         </p>
                     </div>
                     <div>
                         <h2>4. Fikri Mülkiyet</h2>
                         <p>
-                            Web sitemizde sunulan veya erişilen tüm içerikler;
-                            metinler, grafikler, logolar, görseller ve
-                            yazılımlar, sahiplerinin malıdır ve telif hakları ve
-                            diğer yasalarla korunmaktadır.
+                            Hizmetlerimizde sunulan veya erişilebilen tüm
+                            içerik, metin, grafik, logo, resim ve yazılım gibi,
+                            lisans sahiplerinin mülkiyetindedir ve telif hakkı
+                            ile diğer yasalarla korunmaktadır.
                         </p>
                     </div>
                     <div>
-                        <h2>5. Sorumluluk Sınırlaması</h2>
+                        <h2>5. Sorumluluğun Sınırlandırılması</h2>
                         <p>
-                            Biz, dolaylı, rastlantısal, özel, sonuçsal veya
-                            cezai zararlar, kar kaybı, gelir kaybı, veri kaybı
-                            veya kullanım kaybı gibi durumlar nedeniyle sorumlu
-                            tutulamayız. Bu tür zararlar, sözleşme, haksız fiil
-                            veya başka bir şekilde ortaya çıkarsa,
-                            sorumluluğumuz bulunmamaktadır.
+                            Biz, hizmetlerimize erişiminiz veya kullanmanız
+                            sonucu meydana gelen, herhangi bir dolaylı,
+                            tesadüfi, özel, sonuçsal veya cezai zarardan,
+                            kazanç, gelir, veri kaybı veya kullanım dahil olmak
+                            üzere, herhangi bir üçüncü şahsın uğrayacağı zarar
+                            için sorumlu değiliz.
                         </p>
                     </div>
                     <div>
                         <h2>6. Yürürlükteki Hukuk</h2>
                         <p>
-                            Bu Kullanım Şartları, [Geçerli Yargı Alanınız]
-                            yasalarına tabi olup, herhangi bir çatışma hukuku
-                            ilkelerine bakılmaksızın yorumlanacaktır.
+                            Bu Hizmet Kullanım Şartları, [Geçerli Yargı
+                            Alanınız] yasalarına göre yönetilecek ve bu
+                            yasaların uyuşmazlık hükümleri göz önünde
+                            bulundurulmadan uygulanacaktır.
                         </p>
                     </div>
                     <div>
-                        <h2>7. Şartlarda Değişiklik</h2>
+                        <h2>7. Şartlardaki Değişiklikler</h2>
                         <p>
-                            Bu Kullanım Şartlarını zaman zaman önceden
-                            bildirimde bulunmaksızın gözden geçirebiliriz.
-                            Şartlarda herhangi bir değişiklik yaptıktan sonra
-                            hizmetlerimizi kullanmaya devam ederseniz, revize
-                            edilmiş şartlara tabi olmayı kabul etmiş olursunuz.
+                            Bu Hizmet Kullanım Şartlarını zaman zaman önceden
+                            bildirimde bulunmaksızın revize edebiliriz.
+                            Şartlarda herhangi bir değişiklik olduktan sonra
+                            hizmetlerimizi kullanmaya devam ederek, revize
+                            edilmiş şartlarla bağlı kalmayı kabul edersiniz.
                         </p>
                     </div>
                     <div>
                         <h2>8. Bizimle İletişime Geçin</h2>
                         <p>
-                            Bu Kullanım Şartları hakkında herhangi bir sorunuz
-                            veya endişeniz varsa, bizimle şu adresten iletişime
-                            geçebilirsiniz:
-                            <a href="mailto:altın_zanaat@gmail.com"
-                                >altın_zanaat@gmail.com</a
-                            >.
+                            Bu Hizmet Kullanım Şartları ile ilgili herhangi bir
+                            sorunuz veya endişeniz varsa, lütfen bizimle
+                            <a href="mailto:oyun_zeka@gmail.com"
+                                >oyun_zeka@gmail.com</a
+                            >
+                            adresi üzerinden iletişime geçin.
                         </p>
                     </div>
                     <footer>
                         <p>
-                            Kullanım Şartlarımızı incelediğiniz için teşekkür
-                            ederiz. Web sitemizi kullanmaktan keyif almanızı
-                            dileriz!
+                            Hizmet Kullanım Şartlarımızı incelediğiniz için
+                            teşekkür ederiz. Hizmetlerimizi kullanırken keyif
+                            almanızı dileriz!
                         </p>
                     </footer>
                 </div>
@@ -212,7 +214,7 @@
             <div class="container py-5">
                 <div class="row g-5">
                     <div class="col-lg-4 col-md-6">
-                        <h4 class="text-white mb-3">AltınZanaat</h4>
+                        <h4 class="text-white mb-3">KodKale</h4>
                         <p>
                             Web sitemizi ziyaret ettiğiniz için teşekkür ederiz!
                             Sizinle iletişimde kalmayı ve sunduğumuz hizmetler
