--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>AltınZanaat</title>
+        <title>KodKale</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport" />
         <meta content="" name="keywords" />
         <meta content="" name="description" />
@@ -68,7 +68,7 @@
                 class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0 sticky-top shadow-sm"
             >
                 <a href="" class="navbar-brand p-0">
-                    <h1 class="text-primary m-0">AltınZanaat</h1>
+                    <h1 class="text-primary m-0">KodKale</h1>
                 </a>
                 <button
                     class="navbar-toggler"
@@ -109,32 +109,30 @@
                 <div class="page__content" style="padding: 20px 0px">
                     <h1>Gizlilik Politikası</h1>
                     <p>
-                        Gizlilik Politikamıza hoş geldiniz! Bu sayfa, seyahat,
-                        altın ve oyun geliştirme hizmetlerimizi kullanırken
-                        kişisel bilgilerinizi nasıl topladığımızı,
-                        kullandığımızı ve koruduğumuzu açıklar. Gizliliğiniz
-                        bizim için önemlidir ve kişisel verilerinizi korumak ve
-                        nasıl kullandığımız konusunda şeffaf olmak için
-                        taahhütte bulunuyoruz.
+                        Gizlilik Politikası sayfamıza hoş geldiniz! Bu sayfa,
+                        oyun geliştirme hizmetlerimizi kullanırken kişisel
+                        bilgilerinizi nasıl topladığımızı, kullandığımızı ve
+                        koruduğumuzu açıklar. Gizliliğiniz bizim için önemlidir
+                        ve kişisel verilerinizi koruma ve nasıl kullandığımız
+                        konusunda şeffaf olmayı taahhüt ediyoruz.
                     </p>
                     <div>
                         <h2>1. Giriş</h2>
                         <p>
-                            Seyahat, altın ve oyun geliştirme hizmetlerimiz,
-                            ihtiyaçlarınıza özel çözümler sunmayı
-                            hedeflemektedir. Bu hizmetleri sağlarken, belirli
-                            kişisel bilgilerinizi toplar ve işleriz. Bu Gizlilik
+                            Hizmetlerimiz, ihtiyaçlarınıza göre
+                            kişiselleştirilmiş çözümler sunmayı hedeflemektedir.
+                            Bu hizmetleri sağlarken, belirli kişisel
+                            bilgilerinizi toplar ve işleriz. Bu Gizlilik
                             Politikası, kişisel verilerinizin toplanması,
-                            kullanılması ve açıklanması konusundaki
-                            uygulamalarımızı açıklamaktadır.
+                            kullanılması ve açıklanmasıyla ilgili
+                            uygulamalarımızı açıklar.
                         </p>
                     </div>
                     <div>
                         <h2>2. Topladığımız Bilgiler</h2>
                         <p>
-                            Seyahat, altın ve oyun geliştirme hizmetlerimizi
-                            kullanırken çeşitli bilgiler toplarız, bunlar
-                            şunları içerebilir:
+                            Oyun geliştirme hizmetlerimizi kullandığınızda,
+                            aşağıdaki türlerde çeşitli bilgiler toplarız:
                         </p>
                         <ul>
                             <li>
@@ -143,77 +141,76 @@
                                 bilgilerinizi içerebilir.
                             </li>
                             <li>
-                                Profesyonel Bilgiler: İş unvanınız, şirket
-                                adınız ve sektörünüz gibi profesyonel geçmişiniz
-                                hakkında bilgiler.
+                                Profesyonel Bilgiler: İş geçmişinizle ilgili
+                                bilgiler, örneğin iş unvanınız, şirket adınız ve
+                                sektör.
                             </li>
                             <li>
                                 Ödeme Bilgileri: Hizmetlerimize ödeme
-                                yapıyorsanız, ödeme kartı bilgileri veya diğer
-                                finansal detaylar toplanabilir.
+                                yaptığınızda, ödeme kartı bilgileri veya diğer
+                                finansal bilgiler toplayabiliriz.
                             </li>
                             <li>
-                                İletişim Verileri: Bizimle yaptığınız e-posta
-                                veya platform üzerinden yapılan mesajlaşmalar
-                                gibi iletişimleri içerir.
+                                İletişim Verileri: Bizimle yaptığınız her türlü
+                                iletişimi içerir, örneğin e-posta veya platform
+                                üzerinden gönderilen mesajlar.
                             </li>
                             <li>
-                                Kullanım Verileri: Web sitemizi veya
-                                platformumuzu nasıl kullandığınız hakkında
-                                bilgiler.
+                                Kullanım Verileri: Oyun geliştirme
+                                hizmetlerimizi nasıl kullandığınızla ilgili
+                                bilgiler, web sitemiz veya platformumuzla olan
+                                etkileşimleriniz dahil.
                             </li>
                         </ul>
                         <p>
                             Bu bilgileri, doğrudan bize sağladığınızda,
                             hizmetlerimizi kullandığınızda veya web sitemizle
-                            etkileşimde bulunduğunuzda toplarız.
+                            etkileşime geçtiğinizde toplarız.
                         </p>
                     </div>
                     <div>
                         <h2>3. Bilgilerinizi Nasıl Kullanıyoruz</h2>
                         <p>
-                            Topladığımız bilgileri çeşitli amaçlar için
-                            kullanıyoruz, bunlar şunları içerebilir:
+                            Topladığımız bilgileri çeşitli amaçlarla
+                            kullanıyoruz, bunlar şunlardır:
                         </p>
                         <ul>
                             <li>
-                                Hizmet Sağlama: Talep ettiğiniz hizmetleri
-                                sunmak ve sözleşmesel yükümlülüklerimizi yerine
-                                getirmek için.
+                                Hizmet Sağlama: Talep ettiğiniz oyun geliştirme
+                                hizmetlerini sağlamak ve sözleşmesel
+                                yükümlülüklerimizi yerine getirmek.
                             </li>
                             <li>
-                                İletişim: Hizmetlerimiz hakkında sizinle
-                                iletişime geçmek, sorularınıza yanıt vermek ve
-                                müşteri desteği sağlamak için.
+                                İletişim: Hizmetlerimizle ilgili sizinle
+                                iletişime geçmek, sorularınızı yanıtlamak ve
+                                müşteri desteği sağlamak.
                             </li>
                             <li>
-                                İyileştirmeler: Hizmetlerimizi geliştirmek ve
-                                geri bildirimleriniz ile kullanım
-                                alışkanlıklarınıza dayalı yeni teklifler
-                                oluşturmak için.
+                                İyileştirmeler: Hizmetlerimizi iyileştirmek ve
+                                geri bildiriminiz ile kullanım desenlerinize
+                                dayalı yeni teklifler geliştirmek.
                             </li>
                             <li>
                                 Pazarlama: Size promosyonel materyaller, özel
-                                teklifler veya hizmetlerimiz hakkında
-                                ilgilenebileceğiniz diğer bilgileri göndermek
-                                için.
+                                teklifler veya ilgilenebileceğinizi düşündüğümüz
+                                diğer oyun geliştirme hizmetleri hakkında bilgi
+                                göndermek.
                             </li>
                         </ul>
                         <p>
-                            Ayrıca bilgilerinizi, izninizle veya yasal olarak
-                            izin verilen diğer amaçlar için de kullanabiliriz.
+                            Ayrıca, bilgilerinizi, yasal olarak izin verilen
+                            veya gerektiren diğer amaçlar için kullanabiliriz.
                         </p>
                     </div>
                     <div>
                         <h2>4. Veri Güvenliği</h2>
                         <p>
-                            Kişisel bilgilerinizi ciddi şekilde koruruz ve
-                            yetkisiz erişim, kullanım veya ifşa edilmesine karşı
+                            Kişisel bilgilerinizin güvenliğini ciddiyetle ele
+                            alır ve yetkisiz erişim, kullanım veya ifşadan
                             korumak için makul önlemler alırız. Verilerinizi
-                            güvence altına almak için endüstri standardı
-                            güvenlik önlemleri uygularız, bunlar arasında
-                            şifreleme, güvenlik duvarları ve güvenli sunucu
-                            altyapısı yer alır.
+                            korumak için endüstri standardı güvenlik önlemleri
+                            kullanırız, bunlar arasında şifreleme, güvenlik
+                            duvarları ve güvenli sunucu altyapısı yer alır.
                         </p>
                     </div>
                     <div>
@@ -221,95 +218,99 @@
                         <p>
                             Kişisel bilgilerinizi, bu Gizlilik Politikasında
                             belirtilen amaçları yerine getirmek için gerekli
-                            olduğu sürece saklarız. Bilgilerinizi artık
-                            saklamamız gerekmediğinde, güvenli bir şekilde imha
-                            ederiz.
+                            olduğu sürece saklarız, aksi takdirde yasal bir
+                            saklama süresi gerekmiyorsa. Bilgilerinize artık
+                            ihtiyacımız kalmadığında, verilerinizi güvenli bir
+                            şekilde yok ederiz.
                         </p>
                     </div>
                     <div>
                         <h2>6. Bilgilerin Paylaşılması</h2>
                         <p>
-                            Kişisel bilgilerinizi bazı durumlarda üçüncü
-                            şahıslarla paylaşabiliriz, bunlar şunları
-                            içerebilir:
+                            Kişisel bilgilerinizi belirli durumlarda üçüncü
+                            şahıslarla paylaşabiliriz:
                         </p>
                         <ul>
                             <li>
-                                Hizmet Sağlayıcılar: Hizmetlerimizi sağlamamıza
-                                yardımcı olmak için üçüncü taraf hizmet
-                                sağlayıcılarını kullanabiliriz, örneğin
-                                barındırma sağlayıcıları, ödeme işleme
-                                hizmetleri veya analiz hizmetleri.
+                                Hizmet Sağlayıcılar: Oyun geliştirme
+                                hizmetlerimizi sağlamamıza yardımcı olan üçüncü
+                                taraf hizmet sağlayıcıları ile çalışabiliriz,
+                                örneğin barındırma sağlayıcıları, ödeme
+                                işlemcileri veya analiz hizmetleri.
                             </li>
                             <li>
-                                İşlem Transferleri: Birleşme, devralma veya
+                                İş Transferleri: Bir birleşme, satın alma veya
                                 varlıklarımızın tamamının veya bir kısmının
-                                satışında, bilgilerinizi bu işlemle birlikte
-                                transfer edebiliriz.
+                                satılması durumunda, bilgilerinizi bu işlemle
+                                birlikte aktarabiliriz.
                             </li>
                             <li>
-                                Yasal Gereklilikler: Bilgilerinizi, yasal
-                                gerekliliklere veya geçerli bir yasal talebe
-                                göre açıklayabiliriz.
+                                Yasal Gereklilikler: Bilgilerinizi, yasalar
+                                tarafından talep edilirse veya geçerli bir yasal
+                                talebe (örneğin mahkeme kararı veya celp) yanıt
+                                olarak açıklayabiliriz.
                             </li>
                         </ul>
                         <p>
-                            Kişisel bilgilerinizi üçüncü taraflara pazarlama
-                            amaçları için satmıyor, kiralamıyor veya ticaretini
-                            yapmıyoruz.
+                            Kişisel bilgilerinizi üçüncü taraflarla pazarlama
+                            amaçları için satmaz, kiralamaz veya takas yapmayız,
+                            ancak açık onayınızla.
                         </p>
                     </div>
                     <div>
                         <h2>7. Haklarınız</h2>
                         <p>
-                            Geçerli veri koruma yasalarına göre kişisel
-                            bilgilerinizle ilgili bazı haklara sahipsiniz,
-                            bunlar şunları içerebilir:
+                            Uygulanabilir veri koruma yasaları uyarınca, kişisel
+                            bilgilerinizle ilgili belirli haklara sahipsiniz,
+                            bunlar şunlardır:
                         </p>
                         <ul>
                             <li>
-                                Erişim: Kişisel bilgilerinize erişim talep etmek
-                                ve elimizdeki verilerin bir kopyasını almak.
+                                Erişim: Kişisel bilgilerinize erişim talep etme
+                                ve sizinle ilgili tuttuğumuz verilerin bir
+                                kopyasını alma.
                             </li>
                             <li>
-                                Düzeltme: Kişisel bilgilerinizdeki
-                                yanlışlıkların düzeltilmesini talep etmek.
+                                Düzeltme: Kişisel bilgilerinizdeki herhangi bir
+                                hata veya eksikliği düzeltmemizi talep etme.
                             </li>
                             <li>
-                                Silme: Belirli durumlarda kişisel bilgilerinizin
-                                silinmesini talep etmek.
+                                Silme: Belirli durumlarda kişisel bilgilerinizi
+                                silmemizi talep etme.
                             </li>
                             <li>
                                 Kısıtlama: Belirli durumlarda kişisel
-                                bilgilerinizin işlenmesini kısıtlamayı talep
-                                etmek.
+                                bilgilerinizin işlenmesini kısıtlama talebinde
+                                bulunma.
                             </li>
                             <li>
                                 İtiraz: Kişisel bilgilerinizin belirli amaçlarla
-                                işlenmesine itiraz etmek.
+                                işlenmesine itiraz etme.
                             </li>
                             <li>
-                                Taşınabilirlik: Kişisel bilgilerinizi
+                                Taşınabilirlik: Kişisel bilgilerinizin
                                 yapılandırılmış, makineyle okunabilir bir
-                                formatta talep etmek.
+                                formatta bir kopyasını talep etme.
                             </li>
                         </ul>
                         <p>
-                            Bu haklardan herhangi birini kullanmak için, bu
-                            Gizlilik Politikası sonunda sağlanan bilgilerle
-                            bizimle iletişime geçebilirsiniz.
+                            Bu hakları kullanmak için, lütfen bu Gizlilik
+                            Politikasının sonunda verilen iletişim bilgileriyle
+                            bizimle iletişime geçin.
                         </p>
                     </div>
                     <div>
-                        <h2>8. Bu Gizlilik Politikasındaki Değişiklikler</h2>
+                        <h2>8. Gizlilik Politikasındaki Değişiklikler</h2>
                         <p>
-                            Bu Gizlilik Politikasını, uygulamalarımızdaki veya
-                            yasal gerekliliklerdeki değişiklikleri yansıtacak
-                            şekilde zaman zaman güncelleyebiliriz. Önemli
-                            değişiklikler yaparsak, güncellenmiş Gizlilik
-                            Politikasını web sitemizde veya diğer yollarla
-                            sizlere bildireceğiz. Bu Gizlilik Politikasını
-                            periyodik olarak gözden geçirmenizi öneririz.
+                            Bu Gizlilik Politikasını, uygulamalarımızda veya
+                            yasal gerekliliklerde değişiklikler yapmak için
+                            zaman zaman güncelleyebiliriz. Önemli değişiklikler
+                            yaparsak, güncellenmiş Gizlilik Politikasını web
+                            sitemizde yayımlayarak veya diğer yollarla
+                            bildireceğiz. Değişikliklerin yürürlüğe girmeden
+                            önce sizi bilgilendireceğiz. Bu Gizlilik
+                            Politikasını periyodik olarak gözden geçirmenizi
+                            öneririz.
                         </p>
                     </div>
                 </div>
@@ -324,7 +325,7 @@
             <div class="container py-5">
                 <div class="row g-5">
                     <div class="col-lg-4 col-md-6">
-                        <h4 class="text-white mb-3">AltınZanaat</h4>
+                        <h4 class="text-white mb-3">KodKale</h4>
                         <p>
                             Web sitemizi ziyaret ettiğiniz için teşekkür ederiz!
                             Sizinle iletişimde kalmayı ve sunduğumuz hizmetler
