--- a/index.html
+++ b/index.html
@@ -663,8 +663,12 @@
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <h4 class="text-white mb-3">Şirket</h4>
-                        <a class="btn btn-link" href="#about">Hakkımızda</a>
-                        <a class="btn btn-link" href="#contact">İletişim</a>
+                        <a class="btn btn-link" href="index.html#about"
+                            >Hakkımızda</a
+                        >
+                        <a class="btn btn-link" href="index.html#contact"
+                            >İletişim</a
+                        >
                         <a class="btn btn-link" href="privacy-policy.html"
                             >Gizlilik</a
                         >
@@ -684,7 +688,7 @@
                         </p>
                         <p class="mb-2">
                             <i class="fa fa-envelope me-3"></i
-                            >altın_zanaat@gmail.com
+                            >kod_kale@gmail.com
                         </p>
                     </div>
                 </div>
