--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 </div>
                 <div class="row g-4">
                     <div
-                        class="col-lg-3 col-sm-6 wow fadeInUp"
+                        class="col-lg-6 col-sm-12 wow fadeInUp"
                         data-wow-delay="0.1s"
                     >
                         <div class="service-item rounded pt-3">
@@ -211,7 +211,7 @@
                         </div>
                     </div>
                     <div
-                        class="col-lg-3 col-sm-6 wow fadeInUp"
+                        class="col-lg-6 col-sm-12 wow fadeInUp"
                         data-wow-delay="0.3s"
                     >
                         <div class="service-item rounded pt-3">
@@ -231,7 +231,7 @@
                         </div>
                     </div>
                     <div
-                        class="col-lg-3 col-sm-6 wow fadeInUp"
+                        class="col-lg-6 col-sm-12 wow fadeInUp"
                         data-wow-delay="0.5s"
                     >
                         <div class="service-item rounded pt-3">
@@ -251,7 +251,7 @@
                         </div>
                     </div>
                     <div
-                        class="col-lg-3 col-sm-6 wow fadeInUp"
+                        class="col-lg-6 col-sm-12 wow fadeInUp"
                         data-wow-delay="0.7s"
                     >
                         <div class="service-item rounded pt-3">
@@ -401,7 +401,7 @@
                                 style="margin-top: -19px"
                             ></div>
                             <div class="text-center p-4">
-                                <h5 class="mb-0">Sophia Lee</h5>
+                                <h5 class="mb-0">Faryal Demir</h5>
                                 <small>Oyun Tasarımcısı</small>
                             </div>
                         </div>
@@ -423,7 +423,7 @@
                                 style="margin-top: -19px"
                             ></div>
                             <div class="text-center p-4">
-                                <h5 class="mb-0">Alex Patel</h5>
+                                <h5 class="mb-0">Ahmet Yılmaz</h5>
                                 <small>Yazılım Geliştiricisi</small>
                             </div>
                         </div>
@@ -445,7 +445,7 @@
                                 style="margin-top: -19px"
                             ></div>
                             <div class="text-center p-4">
-                                <h5 class="mb-0">Emily Johnson</h5>
+                                <h5 class="mb-0">Eylül Mataraci</h5>
                                 <small>Teknoloji Uzmanı</small>
                             </div>
                         </div>
@@ -467,7 +467,7 @@
                                 style="margin-top: -19px"
                             ></div>
                             <div class="text-center p-4">
-                                <h5 class="mb-0">David Miller</h5>
+                                <h5 class="mb-0">Baris Şahin</h5>
                                 <small>Strateji Uzmanı</small>
                             </div>
                         </div>
@@ -499,7 +499,7 @@
                             src="img/testimonial-1.jpg"
                             style="width: 80px; height: 80px"
                         />
-                        <h5 class="mb-0">David Miller</h5>
+                        <h5 class="mb-0">Ali Kaya</h5>
                         <p class="mb-0">
                             Oyun geliştirme projelerinde ekibin
                             profesyonelliğinden çok etkilendim. Yaratıcı
@@ -515,7 +515,7 @@
                             src="img/testimonial-2.jpg"
                             style="width: 80px; height: 80px"
                         />
-                        <h5 class="mb-0">Ryan Davis</h5>
+                        <h5 class="mb-0">Ömer Yıldız</h5>
                         <p class="mt-2 mb-0">
                             "Ekibimizle çalışmak son derece verimliydi. Oyun
                             geliştirme projelerimizdeki ihtiyaçlarımızı
@@ -531,7 +531,7 @@
                             src="img/testimonial-3.jpg"
                             style="width: 80px; height: 80px"
                         />
-                        <h5 class="mb-0">Sophia Lee</h5>
+                        <h5 class="mb-0">Mustafa Öztürk</h5>
                         <p class="mb-0">
                             Oyun projelerimizde aldığımız destekle çok verimli
                             sonuçlar elde ettik. Gerçekten mükemmel bir iş
